--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@unhead/vue": "^1.11.18",
     "emailjs-com": "^3.2.0",
     "gsap": "^3.12.7",
+    "locomotive-scroll": "^4.1.4",
     "motion": "^12.0.5",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
